--- a/styles.css
+++ b/styles.css
@@ -820,8 +820,9 @@ a {
 
 .contact-card {
   text-align: center;
-  background: rgba(43, 54, 118, 0.5);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(43, 54, 118, 0.05);
+  /* border: 1px solid rgba(255, 255, 255, 0.1); */
+  box-shadow: 1px 2px 3px grey;
   padding: 25px;
   border-radius: 12px;
   transition: background 0.3s ease;
@@ -874,13 +875,21 @@ form {
   padding: 40px;
   padding-top: 15 px;
   border-radius: 12px;
-  border: 1px solid black;
+  background: rgba(107, 115, 156, 0.05);
+  /* border: 1px solid black; */
+  box-shadow: 1px 1px 1px grey;
   color: white;
   box-shadow: 3px 2px 10px rgba(0,0,0,0.1);
   font-family: 'Segoe UI', sans-serif;
   padding-bottom: 15px;
+  transition: border-color 1s ease, box-shadow 1s ease;
 }
 
+form:hover{
+  border-color: #0077ff;
+  box-shadow: 0 0 5px rgba(0,119,255,0.3);
+  outline: none;
+}
 form label {
   display: block;
   font-size: 1.1em;
