--- a/styles.css
+++ b/styles.css
@@ -853,7 +853,10 @@ a {
   margin-bottom: 20px;
   color: black;
 }
+.contact-right input[type="email"]{
+  width: auto;
 
+}
 .contact-link {
   color: white;
   background-color: var(--accent-blue);
@@ -931,7 +934,7 @@ form textarea:focus {
   font-weight: 500;
 }
 
-.radio-group input[type="radio"] {
+.radio-group input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -947,12 +950,12 @@ form textarea:focus {
   transition: border-color 0.3s ease, background-color 0.3s ease;
 }
 
-.radio-group input[type="radio"]:checked {
+.radio-group input[type="checkbox"]:checked {
   border-color: var(--another-blue);
   background-color: var(--another-blue);
 }
 
-.radio-group input[type="radio"]:checked::before {
+.radio-group input[type="checkbox"]:checked::before {
   content: '';
   display: block;
   width: 8px;
@@ -1439,24 +1442,82 @@ footer div p:last-child{
   }
 
   /* Contact */
+  form{
+    max-width: 330px;
+  }
   form input{
     width: auto;
   }
   .contact-left{
     display: none;
   }
-  .contact-inner {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    width:auto;
-    padding: auto;
-  }
 
   form {
     width: auto;
   }
+  #contact {
+    padding: 50px 20px;
+    padding-left: 16px;
+    height: auto;
+  }
 
+  .contact-inner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 95%;
+    margin: auto;
+    padding-left: 3px !important;
+    gap: 40px;
+  }
+
+  .contact-left {
+    text-align: center;
+  }
+
+  .contact-grid {
+    grid-template-columns: 1fr;
+    gap: 25px;
+  }
+
+  .contact-card {
+    padding: 20px;
+  }
+
+  .contact-right form {
+    width: 100%;
+    margin: 0 auto;
+    padding: 25px 15px;
+  }
+
+  .contact-right input,
+  .contact-right textarea {
+    width: 100%;
+  }
+
+  .contact-right button {
+    width: 100%;
+  }
+
+  .radio-group{
+    display: flex;
+    max-width: 330px;
+    flex-wrap: wrap;
+
+  }
+  /* input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 50%; 
+  min-width: 12px; 
+  height: 20px;
+  border: 2px solid #999; 
+}
+
+input[type="checkbox"]:checked {
+  border: 6px solid black; 
+} */
   #about{
     padding: 5px;
   }
@@ -1501,47 +1562,6 @@ footer div p:last-child{
     gap: 15px;
   }
 
-  #contact {
-    padding: 50px 20px;
-    height: auto;
-  }
-
-  .contact-inner {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 95%;
-    margin: auto;
-    gap: 40px;
-  }
-
-  .contact-left {
-    text-align: center;
-  }
-
-  .contact-grid {
-    grid-template-columns: 1fr;
-    gap: 25px;
-  }
-
-  .contact-card {
-    padding: 20px;
-  }
-
-  .contact-right form {
-    width: 100%;
-    margin: 0 auto;
-    padding: 25px 15px;
-  }
-
-  .contact-right input,
-  .contact-right textarea {
-    width: 100%;
-  }
-
-  .contact-right button {
-    width: 100%;
-  }
 
   
   /* FOOTER ADJUSTMENTS */
