--- a/styles.css
+++ b/styles.css
@@ -1184,6 +1184,9 @@ footer div p:last-child{
     width: 90%;
     margin: auto;
   }
+  .contact-left{
+    display: none;
+  }
   #contact {
     height: auto;
     padding: 60px 20px;
@@ -1359,7 +1362,6 @@ footer div p:last-child{
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     opacity: 0;
-    pointer-events: none;
     transition: opacity 0.35s ease;
     z-index: 1040;
     pointer-events: none;
@@ -1371,7 +1373,7 @@ footer div p:last-child{
 
   body.nav-open #nav-overlay {
     opacity: 1;
-    pointer-events: auto;
+    /* pointer-events: auto; */
   }
 
   body.nav-open #hamburger-btn i::before {
@@ -1487,7 +1489,7 @@ footer div p:last-child{
   .contact-right form {
     width: 100%;
     margin: 0 auto;
-    padding: 25px 15px;
+    padding: 25px 11px;
   }
 
   .contact-right input,
